# revlm

./: .gitignore  README.md  main.py  pyproject.toml
docs/: USAGE.md
experiments/: analyze_embeddings.py  extract_embeddings.py
reference/: body_orientation.py  detect.py
scripts/: evaluate_snowball.py  hitl_review.py  lora_train.py  run_full_pipeline.sh  run_hitl_inference.py  setup_mebow.py  visualize_hitl.py
src/evaluation/: __init__.py  eval_dataset.py  metrics.py
src/models/: hitl_collector.py  lora_trainer.py  reid.py  vlm_verifier.py
src/preprocessing/: __init__.py  align_angle.py  body_orientation.py  detect.py  pipeline.py
tests/preprocessing/: test_align_angle.py  test_body_orientation.py  test_detect.py
tests/smoke/: conftest.py  test_detect.py  test_hitl.py  test_mebow.py  test_qwen.py  test_reid.py  test_vlm_verifier.py
